--- a/templates/count.html
+++ b/templates/count.html
@@ -5,6 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Count</h1>
+    <h2>Count Completed</h2>
+    <a href="{% url 'home' %}">Start Again</a>
+    <h3>There are {{ count }} words in your text</h3>
+    <h4>Original text:</h4>
+    <p>{{ fulltext }}</p>
+    <h4>Word count:</h4>
+    {% for word, counttotal in sortedwords %}
+    {{ counttotal }} - {{ word }}
+    <br />
+    {% endfor %}
 </body>
 </html>
